# 2024-group-9

./: .gitignore  A simple example  Image.jfif  PlayerControlledSprite.pde  README.md  class-diagram.drawio  communication-diagram.drawio  example 2  example3.pde  example4.pde  example5.pde
Evaluation/: NASA TLX analysis.xlsx  Think aloud Ali.txt  Think aloud Freya.txt  Think aloud Klaudia.txt  Think aloud common themes.txt
MISSIONPOSSIBLE/: missionpossibledraw.pde  sketch.properties
asset/: readme.txt
asset/game/: StartScreen.pde  sketch.properties
asset/test1/: sketch_240202a.pde  user story.docx
leaderboard-server/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
leaderboard-server/leaderboard_server/: main.py
level1sketch/: level1sketch.pde
platformer/src/main/java/: Camera.java  GameState.java  Leaderboard.java  Level.java  ModeVariant.java  MyProcessingSketch.java  SectionVariant.java  View.java  WarpSpeed.java  WeatherVariant.java
platformer/src/main/resources/: level1.json
platformer/src/processing/MissionPossible/: Animation.pde  BackToMain.pde  Camera.pde  CharacterVariant.pde  FogLayer.pde  GameSettings.pde  GameState.pde  ImageData.pde  Leaderboard.pde  Level.pde  MainMenuItem.pde  MissionPossible.pde  ModeVariant.pde  NonPlayerControlledSprite.pde  PlayerControlledSprite.pde  SectionVariant.pde  Snowflake.pde  Sprite.pde  UIElement.pde  UIElementVariant.pde  UserInterface.pde  View.pde  WarpSpeed.pde  WeatherVariant.pde  Wind.pde
platformer/src/processing/MissionPossible/LevelFiles/: level1.json
(+22 files in other folders)
