[tool.poetry]
name = "leaderboard-server"
version = "0.1.0"
description = ""
authors = ["Charles Harris <charles@mexeng.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
